--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,17 @@
 body{
     background-color: black;
 }
+
+.hero-image{
+    background-image: url("/img/home.jpeg");
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.stroke {
+  font-size: 4em;
+  -webkit-text-stroke: 1px rgb(255, 255, 255);
+  -webkit-text-fill-color: rgb(0, 0, 0);
+  
+}
