--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -31,3 +31,12 @@ body{
 .blue-background{
     background-color: #011F5D;
 }
+
+
+.blueDashboard{
+  background-color: #2263E1;
+}
+
+.textblueDashboard{
+  color: #2263E1;
+}
